tests/type_errors/result_unwrap_arithmetic.nos
# expect_error: type mismatch
# Result[String, String].unwrap() * 2 should fail
main() = {
    x: Result[String, String] = Ok("hello")
    x.unwrap() * 2
}
